--- a/dialogs/utils/PasswordDialog.ui
+++ b/dialogs/utils/PasswordDialog.ui
@@ -10,8 +10,36 @@
     <height>132</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Sans Serif</family>
+   </font>
+  </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Please enter your password</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">#PasswordDialog {
+	background-image: url(:/images/background_blue);
+}
+
+QLabel {
+	color: white;
+}
+
+QPushButton {
+	font-size: 12px;
+	font-family: &quot;Sans Serif&quot;;
+}
+
+QDoubleSpinBox, QSpinBox, QDateEdit, QDateTimeEdit, QLineEdit {
+	color: white;
+	background-color: qlineargradient(spread:pad, x1:0.481, y1:1, x2:0.515, y2:0, stop:0 rgba(0, 0, 0, 93), stop:0.995238 rgba(0, 0, 0, 147));
+	border: none;
+	border-radius: 4px;
+	selection-background-color: #333333;
+	padding: 4px 2px 4px 2px;
+}</string>
   </property>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
@@ -25,6 +53,11 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLabel" name="label">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+       </font>
+      </property>
       <property name="text">
        <string>Please enter your password</string>
       </property>
@@ -35,6 +68,11 @@
     </item>
     <item>
      <widget class="QLineEdit" name="lineEdit">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+       </font>
+      </property>
       <property name="echoMode">
        <enum>QLineEdit::Password</enum>
       </property>
@@ -44,6 +82,12 @@
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="pushButton_submit">
+        <property name="font">
+         <font>
+          <family>Sans Serif</family>
+          <pointsize>-1</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Submit</string>
         </property>
@@ -51,6 +95,12 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_cancel">
+        <property name="font">
+         <font>
+          <family>Sans Serif</family>
+          <pointsize>-1</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Cancel</string>
         </property>
