--- a/dialogs/job/JobShow.ui
+++ b/dialogs/job/JobShow.ui
@@ -7,114 +7,79 @@
     <x>0</x>
     <y>0</y>
     <width>717</width>
-    <height>644</height>
+    <height>725</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Dialog</string>
+  <property name="font">
+   <font>
+    <family>Sans Serif</family>
+   </font>
   </property>
-  <widget class="QWidget" name="formLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>70</y>
-     <width>291</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <layout class="QFormLayout" name="formLayout_dateCustomer">
-    <property name="fieldGrowthPolicy">
-     <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-    </property>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_customer">
-      <property name="text">
-       <string>Customer</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLabel" name="label_customerNameE">
-      <property name="text">
-       <string>customer name</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="formLayoutWidget_2">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>320</y>
-     <width>261</width>
-     <height>101</height>
-    </rect>
-   </property>
-   <layout class="QFormLayout" name="formLayout_charges">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_labourCharge">
-      <property name="text">
-       <string>Labour Charge</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_totalChargeExclVat">
-      <property name="text">
-       <string>Total Chage (excl.VAT)</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_vat">
-      <property name="text">
-       <string>VAT</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_totalChargeInclVat">
-      <property name="text">
-       <string>Total Charge (incl. VAT)</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLabel" name="label_labourChargeE">
-      <property name="text">
-       <string>labour charge</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QLabel" name="label_totalChargeExclVatE">
-      <property name="text">
-       <string>total charge</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QLabel" name="label_vatE">
-      <property name="text">
-       <string>vat</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QLabel" name="label_totalChargeInclVatE">
-      <property name="text">
-       <string>total charge</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
+  <property name="windowTitle">
+   <string>Job</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton {
+	font-size: 12px;
+	font-family: &quot;Sans Serif&quot;;
+}
+
+#verticalWidget_menu {
+	background-color: rgba(47, 47, 47, 120);
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+#verticalWidget_menu QPushButton {
+	border: none;
+	font-weight: bold;
+	color: #dddddd;
+	text-align: left;
+	padding-left: 15px;
+}
+
+#verticalWidget_menu QPushButton:hover {
+	color: white;
+}
+
+#verticalWidget_menu QPushButton:pressed {
+	color: white;
+}
+
+QLabel {
+	color: white;
+	font-family: &quot;Sans Serif&quot;;
+}
+
+#label_title, #label_dateE {
+	font-size: 30px;
+	font-weight: bold;
+}
+
+QDoubleSpinBox, QSpinBox, QDateEdit, QDateTimeEdit, QLineEdit {
+	color: white;
+	background-color: qlineargradient(spread:pad, x1:0.481, y1:1, x2:0.515, y2:0, stop:0 rgba(0, 0, 0, 93), stop:0.995238 rgba(0, 0, 0, 147));
+	border: none;
+	border-radius: 4px;
+	selection-background-color: #333333;
+	padding: 4px 2px 4px 2px;
+}
+
+QListWidget, QTableWidget, QPlainTextEdit {
+	color: white;
+	background-color: qlineargradient(spread:pad, x1:0.481, y1:1, x2:0.515, y2:0, stop:0 rgba(0, 0, 0, 93), stop:0.1 rgba(0, 0, 0, 109), stop:0.904762 rgba(0, 0, 0, 135), stop:0.995238 rgba(0, 0, 0, 147));
+
+}
+
+#JobShow {
+	background-image: url(:/images/background_blue);
+}</string>
+  </property>
   <widget class="QPushButton" name="pushButton_ok">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>600</y>
+     <x>180</x>
+     <y>680</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -126,8 +91,8 @@
   <widget class="QLabel" name="label_part">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>130</y>
+     <x>390</x>
+     <y>160</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -139,8 +104,8 @@
   <widget class="QLabel" name="label_tasks">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>220</y>
+     <x>390</x>
+     <y>260</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -149,31 +114,19 @@
     <string>Tasks</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_completionState">
+  <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>440</y>
-     <width>121</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Completion State</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_job">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
+     <x>30</x>
      <y>10</y>
      <width>121</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>22</pointsize>
+     <family>Sans Serif</family>
+     <pointsize>-1</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -181,19 +134,23 @@
    <property name="text">
     <string>Job for</string>
    </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+   </property>
   </widget>
   <widget class="QLabel" name="label_dateE">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>150</x>
      <y>10</y>
      <width>351</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>22</pointsize>
+     <family>Sans Serif</family>
+     <pointsize>-1</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -201,25 +158,15 @@
    <property name="text">
     <string>date</string>
    </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_viewCustomerDetails">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>100</y>
-     <width>171</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>View customer details</string>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_edit">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>600</y>
+     <x>300</x>
+     <y>680</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -228,24 +175,11 @@
     <string>Edit</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_completionStateE">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>440</y>
-     <width>131</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>completion state</string>
-   </property>
-  </widget>
   <widget class="QListWidget" name="listWidget_tasksE">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>240</y>
+     <x>390</x>
+     <y>280</y>
      <width>256</width>
      <height>71</height>
     </rect>
@@ -254,8 +188,8 @@
   <widget class="QListWidget" name="listWidget_partsE">
    <property name="geometry">
     <rect>
-     <x>440</x>
-     <y>150</y>
+     <x>390</x>
+     <y>180</y>
      <width>256</width>
      <height>71</height>
     </rect>
@@ -264,8 +198,8 @@
   <widget class="QPushButton" name="pushButton_delete">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>600</y>
+     <x>420</x>
+     <y>680</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -274,26 +208,13 @@
     <string>Delete</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_markAsDone">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>470</y>
-     <width>111</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Mark as done</string>
-   </property>
-  </widget>
   <widget class="QPlainTextEdit" name="plainTextEdit_descriptionE">
    <property name="geometry">
     <rect>
-     <x>73</x>
-     <y>170</y>
-     <width>271</width>
-     <height>111</height>
+     <x>70</x>
+     <y>180</y>
+     <width>301</width>
+     <height>171</height>
     </rect>
    </property>
    <property name="readOnly">
@@ -304,7 +225,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>140</y>
+     <y>160</y>
      <width>91</width>
      <height>17</height>
     </rect>
@@ -316,15 +237,22 @@
   <widget class="QWidget" name="gridWidget_paidBy" native="true">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>510</y>
-     <width>431</width>
+     <x>130</x>
+     <y>580</y>
+     <width>461</width>
      <height>71</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_paidBy">
     <item row="0" column="1">
      <widget class="QLabel" name="label_paymentTypeE">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="text">
        <string>payment type</string>
       </property>
@@ -334,6 +262,9 @@
      <widget class="QLabel" name="label_paidBy">
       <property name="text">
        <string>Paid by</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
@@ -349,10 +280,20 @@
       <property name="text">
        <string>Payment date</string>
       </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
      </widget>
     </item>
     <item row="1" column="1" colspan="2">
      <widget class="QLabel" name="label_paymentDateE">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="text">
        <string>payment date</string>
       </property>
@@ -370,8 +311,8 @@
   <widget class="QWidget" name="gridWidget_sendInvoiceMarkAsPaid" native="true">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>430</y>
+     <x>450</x>
+     <y>490</y>
      <width>211</width>
      <height>80</height>
     </rect>
@@ -397,6 +338,272 @@
        <string>View invoice</string>
       </property>
      </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>60</y>
+     <width>481</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_customer">
+      <property name="text">
+       <string>Customer</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLabel" name="label_customerNameE">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>customer name</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>400</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="1" column="1">
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="pushButton_viewCustomerDetails">
+        <property name="text">
+         <string>View customer details</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>230</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget_3">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>340</y>
+     <width>479</width>
+     <height>151</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout_4">
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_totalChargeExclVat">
+      <property name="text">
+       <string>Total Chage (excl.VAT)</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_vat">
+      <property name="text">
+       <string>VAT</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_totalChargeInclVat">
+      <property name="text">
+       <string>Total Charge (incl. VAT)</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLabel" name="label_labourChargeE">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>labour charge</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLabel" name="label_totalChargeExclVatE">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>total charge</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLabel" name="label_vatE">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>vat</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLabel" name="label_totalChargeInclVatE">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>total charge</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_labourCharge">
+      <property name="text">
+       <string>Labour Charge</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <spacer name="horizontalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>300</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget_4">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>500</y>
+     <width>351</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout_5">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_completionState">
+      <property name="text">
+       <string>Completion State</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLabel" name="label_completionStateE">
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>completion state</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <layout class="QGridLayout" name="gridLayout_6">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="pushButton_markAsDone">
+        <property name="text">
+         <string>Mark as done</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <spacer name="horizontalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
