--- a/dialogs/task/TaskForm.ui
+++ b/dialogs/task/TaskForm.ui
@@ -6,19 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>370</width>
-    <height>269</height>
+    <width>415</width>
+    <height>232</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Sans Serif</family>
+   </font>
+  </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Task Form</string>
   </property>
   <widget class="QLabel" name="label_taskFormTitle">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>10</y>
-     <width>261</width>
+     <width>341</width>
      <height>31</height>
     </rect>
    </property>
@@ -33,43 +38,11 @@
     <string>Task form title</string>
    </property>
   </widget>
-  <widget class="QWidget" name="formLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>70</y>
-     <width>238</width>
-     <height>113</height>
-    </rect>
-   </property>
-   <layout class="QFormLayout" name="formLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_date">
-      <property name="text">
-       <string>Date</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_description">
-      <property name="text">
-       <string>Description</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QPlainTextEdit" name="plainTextEdit_description"/>
-    </item>
-    <item row="0" column="1">
-     <widget class="QDateTimeEdit" name="dateTimeEdit_date"/>
-    </item>
-   </layout>
-  </widget>
   <widget class="QPushButton" name="pushButton_submit">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>220</y>
+     <x>100</x>
+     <y>190</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -81,8 +54,8 @@
   <widget class="QPushButton" name="pushButton_cancel">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>220</y>
+     <x>220</x>
+     <y>190</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -94,8 +67,8 @@
   <widget class="QPushButton" name="pushButton_datePicker">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>70</y>
+     <x>290</x>
+     <y>60</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -103,6 +76,44 @@
    <property name="text">
     <string>Date Picker</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>60</y>
+     <width>262</width>
+     <height>114</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_date">
+      <property name="text">
+       <string>Date</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_description">
+      <property name="text">
+       <string>Description</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QDateTimeEdit" name="dateTimeEdit_date"/>
+    </item>
+    <item row="1" column="1">
+     <widget class="QPlainTextEdit" name="plainTextEdit_description"/>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
