--- a/dialogs/utils/DatePickerDialog.ui
+++ b/dialogs/utils/DatePickerDialog.ui
@@ -7,11 +7,34 @@
     <x>0</x>
     <y>0</y>
     <width>472</width>
-    <height>234</height>
+    <height>257</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Sans Serif</family>
+   </font>
+  </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Select A Date</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton {
+	font-size: 12px;
+	font-family: &quot;Sans Serif&quot;;
+}
+
+#qt_calendar_navigationbar {
+	background-color: rgba(0, 0, 0, 147);
+}
+
+#qt_calendar {
+	color: black;
+}
+
+#DatePickerDialog {
+	background-image: url(:/images/background_blue);
+}</string>
   </property>
   <widget class="QCalendarWidget" name="calendarWidget">
    <property name="geometry">
@@ -19,18 +42,24 @@
      <x>10</x>
      <y>10</y>
      <width>448</width>
-     <height>172</height>
+     <height>181</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_ok">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>200</y>
+     <x>130</x>
+     <y>210</y>
      <width>97</width>
      <height>27</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Sans Serif</family>
+     <pointsize>-1</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>OK</string>
@@ -39,11 +68,17 @@
   <widget class="QPushButton" name="pushButton_cancel">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>200</y>
+     <x>250</x>
+     <y>210</y>
      <width>97</width>
      <height>27</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Sans Serif</family>
+     <pointsize>-1</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Cancel</string>
