--- a/resources/Resources.qrc
+++ b/resources/Resources.qrc
@@ -7,4 +7,11 @@
         <file alias="invoice_receipt_template.html">html/invoice_receipt_template.html</file>
         <file alias="report_template.html">html/report_template.html</file>
     </qresource>
+    <qresource prefix="/images">
+        <file alias="background_blue">images/background_blue.jpg</file>
+        <file alias="down_arrow">images/down_arrow.png</file>
+        <file alias="up_arrow">images/up_arrow.png</file>
+        <file alias="down_arrow_dull">images/down_arrow_dull.png</file>
+        <file alias="up_arrow_dull">images/up_arrow_dull.png</file>
+    </qresource>
 </RCC>
